containers/api-gateway/envoy.json
{
    "node": {
      "id": "api-gateway",
      "cluster": "api-gateway"
    },
    "admin": {
      "access_log_path": "/tmp/envoy-admin.log",
      "address": {
        "socket_address": {
          "address": "0.0.0.0",
          "port_value": 9090
        }
      }
    },
    "stats_sinks": [
      {
        "name": "envoy.statsd",
        "typed_config": {
          "@type": "type.googleapis.com/envoy.config.metrics.v3.StatsdSink",
          "tcp_cluster_name": "statsd-exporter",
          "prefix": "api-gateway"
        }
      }
    ],
    "static_resources": {
      "listeners": [
        {
          "name": "grpc-traffic",
          "address": {
            "socket_address": {
              "address": "0.0.0.0",
              "port_value": 8080
            }
          },
          "filter_chains": [
            {
              "filters": [
                {
                  "name": "envoy.http_connection_manager",
                  "typed_config": {
                    "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                    "codec_type": "AUTO",
                    "stat_prefix": "ingress_grpc",
                    "route_config": {
                      "virtual_hosts": [
                        {
                          "name": "codelab-services",
                          "domains": [ "*" ],
                          "routes": [
                            {
                              "match": {
                                "prefix": "/protobufs.services.v1.ProblemService"
                              },
                              "route": {
                                "cluster": "problem",
                                "timeout": "0s",
                                "max_stream_duration": {
                                  "grpc_timeout_header_max": "0s"
                                }
                              }
                            },
                            {
                              "match": {
                                "prefix": "/protobufs.services.v1.CodeRunnerService"
                              },
                              "route": {
                                "cluster": "submission",
                                "timeout": "0s",
                                "max_stream_duration": {
                                  "grpc_timeout_header_max": "0s"
                                }
                              }
                            }
                          ],
                          "typed_per_filter_config": {
                            "envoy.filters.http.cors": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy",
                              "allow_origin_string_match": [ { "prefix": "http://127.0.0.1:3000" } ],
                              "allow_methods": "GET, POST, PUT, DELETE, OPTIONS",
                              "allow_headers": "*",
                              "max_age": "86400"
                            }
                          }
                        }
                      ]
                    },
                    "http_filters": [
                      {
                        "name": "envoy.filters.http.connect_grpc_bridge",
                        "typed_config": {
                          "@type": "type.googleapis.com/envoy.extensions.filters.http.connect_grpc_bridge.v3.FilterConfig"
                        }
                      },
                      {
                        "name": "envoy.filters.http.cors",
                        "typed_config": {
                          "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                        }
                      },
                      {
                        "name": "envoy.filters.http.grpc_web",
                        "typed_config": {
                          "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
                        }
                      },
                      {
                        "name": "envoy.filters.http.router",
                        "typed_config": {
                          "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                        }
                      }
                    ]
                  }
                }
              ]
            }
          ]
        }
      ],
      "clusters": [
        {
          "name": "problem",
          "connect_timeout": "0.25s",
          "type": "LOGICAL_DNS",
          "http2_protocol_options": { },
          "lb_policy": "ROUND_ROBIN",
          "load_assignment": {
            "cluster_name": "problem",
            "endpoints": [
              {
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "problem",
                          "port_value": PROBLEM_SERVICE_PORT
                        }
                      }
                    }
                  }
                ]
              }
            ]
          }
        },
        {
          "name": "submission",
          "connect_timeout": "0.25s",
          "type": "LOGICAL_DNS",
          "http2_protocol_options": { },
          "lb_policy": "ROUND_ROBIN",
          "load_assignment": {
            "cluster_name": "submission",
            "endpoints": [
              {
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "code-runner",
                          "port_value": SUBMISSION_SERVICE_PORT
                        }
                      }
                    }
                  }
                ]
              }
            ]
          }
        },
        {
          "name": "statsd-exporter",
          "connect_timeout": "0.25s",
          "type": "LOGICAL_DNS",
          "http2_protocol_options": { },
          "lb_policy": "ROUND_ROBIN",
          "load_assignment": {
            "cluster_name": "statsd-exporter",
            "endpoints": [
              {
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "statsd-exporter",
                          "port_value": 9125
                        }
                      }
                    }
                  }
                ]
              }
            ]
          }
        }
      ]
    }
  }
